Fix some sonar warnings